--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -4,17 +4,18 @@ WORKDIR /usr/src/app
 
 COPY . .
 
-
+RUN apt update
 RUN apt-get update && apt-get install -y \
   vim\
   python3 \
   python3-pip
 
 
-
 RUN pip3 install --upgrade pip
 RUN pip3 install requests
 RUN pip3 install confluent-kafka
-RUN pip3 install pandas
+RUN python3 -m pip install grpcio
+RUN python3 -m pip install grpcio-tools
+RUN python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. weather.proto
 
-CMD ["python3", "./consumer.py"]
+CMD ["python3", "./server.py"]
