--- a/weatherapp/Dockerfile
+++ b/weatherapp/Dockerfile
@@ -14,5 +14,8 @@ RUN apt-get update && apt-get install -y \
 RUN pip3 install --upgrade pip
 RUN pip3 install requests
 RUN pip3 install confluent-kafka
+RUN pip3 install aiohttp
+RUN pip3 install cchardet
+RUN pip3 install aiodns
 
 CMD ["python3", "./reqowm.py"]
