working in docker cont

--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -14,8 +14,10 @@ RUN apt-get update && apt-get install -y \
 RUN pip3 install --upgrade pip
 RUN pip3 install requests
 RUN pip3 install confluent-kafka
+RUN pip3 install pandas
 RUN python3 -m pip install grpcio
 RUN python3 -m pip install grpcio-tools
 RUN python3 -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. weather.proto
+RUN export PYTHONPATH=:/usr/src/app
 
 CMD ["python3", "./server.py"]
