--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,7 @@
 name: GitHub Actions Demo
-on: [push]
+on:
+  schedule:
+      - cron:  '03 * * * *'  # run every day at 5 am.
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
