--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on:
   schedule:
-      - cron:  '58 * * * *'  # run every day at 5 am.
+      - cron:  '12 12 * * *'  # run every day at 5 am.
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
