added PR and push

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,16 @@
 name: GitHub Actions Demo
 on:
+  push:
+    branches:
+      - main
+      - master
+  pull_request:
+    branches:
+      - main
+      - master
   schedule:
-    - cron:  '* * * * *'  # run every minute.
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '40 * * * *'
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
