--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 465
           # user credentials
-          username: testUserName
+          username: romanrusin06@gmail.com
           password: ${{ secrets.EMAIL_PASSWORD }}
           # email subject
           subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
